# CC2632-Life-Manager

./: CMakeLists.txt  Functions.c  Functions.h  MainScreen.c  MainScreen.h  MenuScreen.c  MenuScreen.h  MonitorSize.c  MonitorSize.h  NewFile.c  NewFile.h  README.md  Structs.h  UserLogin.c  UserLogin.h  UserRecipeScreen.c  UserRecipeScreen.h  UserRegister.c  UserRegister.h  ViewRegistry.c  ViewRegistry.h  main.c
idea/: encodings.xml  modules.xml  workspace.xml
idea/dictionaries/: joao_vitor.xml
